bug with threshold fixed proper message for lack of similarities added

--- a/frontend/fileInputer.html
+++ b/frontend/fileInputer.html
@@ -73,7 +73,7 @@
             const data = {
               text1: text1,
               text2: text2,
-              value: valueInput.value,
+              threshold: valueInput.value,
             };
 
             sendData(data);
