--- a/frontend/fileInputer.html
+++ b/frontend/fileInputer.html
@@ -27,7 +27,8 @@
         </div>
         <div>
           <input type="radio" id="option2" name="option" value="option2">
-          <label for="option2">Porównanie i analiza w odniesieniu do jednego pliku przesłanego przez użytkownika</label>
+          <label for="option2">Porównanie i analiza w odniesieniu do drugiego pliku przesłanego przez
+            użytkownika</label>
         </div>
       </div>
 
@@ -94,6 +95,11 @@
     document.addEventListener('DOMContentLoaded', function () {
       const option2 = document.getElementById('option2');
       const fileInput2Div = document.getElementById('fileInput2Div');
+
+      //showing fileInput2Div if option2 is checked
+      if (option2.checked) {
+        fileInput2Div.style.maxHeight = fileInput2Div.scrollHeight + "px";
+      }
 
       document.querySelectorAll('input[name="option"]').forEach(function (radio) {
         radio.addEventListener('change', function () {
@@ -200,8 +206,8 @@
       if (response.ok) {
         const result = await response.json();
         console.log(result)
-        //window.location.href = `${baseURL}/report-base`;
-        //displayResult(result); 
+        window.location.href = `${baseURL}/report-base`;
+        displayResult(result);
       } else {
         console.error("Error:", response.statusText);
       }
@@ -221,7 +227,7 @@
       if (response.ok) {
         const result = await response.json();
         console.log(result)
-        window.location.href = `${baseURL}/report`;
+        window.location.href = `${baseURL}/report-two-files`;
         displayResult(result);
       } else {
         console.error("Error:", response.statusText);
