--- a/frontend/fileInputer.html
+++ b/frontend/fileInputer.html
@@ -14,36 +14,37 @@
   <div class="max-w-md mx-auto bg-white p-8 rounded shadow-md">
     <h2 class="text-2xl font-semibold mb-4">Skradzione wzory</h2>
     <p class="mb-4 font-semibold">
-      Prześlij plik w formacie .tex w celu sprawdzenia podobieństwa wzorów, które się w
-      nim znajdują z innymi plikami .tex w naszej bazie.
+      Prześlij dokument w formacie .tex w celu sprawdzenia podobieństwa wzorów, które się w
+      nim znajdują, z innymi wzorami z dokumentów w naszej bazie.
     </p>
     <form id="fileUploadForm" class="mb-4">
 
       <div class="mb-4">
-        <h3 class="text-l font-semibold">Wybierz jedną z opcji analizy pliku:</h3>
+        <h3 class="text-l font-semibold mb-2">Wybierz jedną z opcji analizy dokumentu:</h3>
         <div>
           <input type="radio" id="option1" name="option" value="option1" checked>
           <label for="option1">Porównanie i analiza w odniesieniu do całej bazy</label>
         </div>
         <div>
           <input type="radio" id="option2" name="option" value="option2">
-          <label for="option2">Porównanie i analiza w odniesieniu do drugiego pliku przesłanego przez
+          <label for="option2">Porównanie i analiza w odniesieniu do drugiego dokumentu przesłanego przez
             użytkownika</label>
         </div>
       </div>
 
       <div class="mb-4">
-        <label for="fileInput1" class="block text-sm font-medium text-gray-600">Wybierz plik do analizy:</label>
+        <label for="fileInput1" class="block text-sm font-medium text-gray-600">Wybierz dokument do analizy:</label>
         <input type="file" id="fileInput1" name="file1" class="mt-1 p-2 border border-gray-300 rounded-md w-full" />
       </div>
 
       <div class="mb-4" id="fileInput2Div">
-        <label for="fileInput2" class="block text-sm font-medium text-gray-600">Wybierz 2 plik:</label>
+        <label for="fileInput2" class="block text-sm font-medium text-gray-600">Wybierz drugi dokument:</label>
         <input type="file" id="fileInput2" name="file2" class="mt-1 p-2 border border-gray-300 rounded-md w-full" />
       </div>
 
       <div class="mb-4">
-        <h3 class="text-l font-semibold"> Opcje zaawansowane (w celu regularnej analizy plików, pozostaw poniższe opcje
+        <h3 class="text-l font-semibold"> Opcje zaawansowane (w celu regularnej analizy dokumentów, pozostaw poniższe
+          opcje
           bez zmian)
           <h3>
       </div>
@@ -79,8 +80,6 @@
           procentowego z zakresu
           0-100.</label>
       </div>
-
-
 
       <button type="button" onclick="submitForm()" class="bg-blue-500 text-white px-4 py-2 rounded-md w-full">
         Porównaj
