proper display of the equations

--- a/frontend/fileInputer.html
+++ b/frontend/fileInputer.html
@@ -42,7 +42,7 @@
         móc kontynuować
       </label>
 
-      <div class="mb-4" id="fileInput2Div">
+      <div class="1" id="fileInput2Div">
         <label for="fileInput2" class="block text-sm font-medium text-gray-600">Wybierz drugi dokument:</label>
         <input type="file" id="fileInput2" name="file2" class="mt-1 p-2 border border-gray-300 rounded-md w-full" />
       </div>
