add report generation for cosine similarity

--- a/frontend/fileInputer.html
+++ b/frontend/fileInputer.html
@@ -96,7 +96,7 @@
     <div id="resultContainer" class="mt-8"></div>
   </div>
 
-  <script>
+  <script defer>
 
     //showing fileInput2Div if option2 is checked
     document.addEventListener('DOMContentLoaded', function () {
