--- a/frontend/fileInputer.html
+++ b/frontend/fileInputer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
   <meta charset="UTF-8" />
@@ -54,7 +54,7 @@
         <h3 class="text-l font-semibold"> Opcje zaawansowane (w celu regularnej analizy dokumentów, pozostaw poniższe
           opcje
           bez zmian)
-          <h3>
+        </h3>
       </div>
 
       <div class="mb-4">
