--- a/frontend/fileInputer.html
+++ b/frontend/fileInputer.html
@@ -16,7 +16,8 @@
       <h2 class="text-2xl font-semibold mb-4">Skradzione wzory</h2>
       <p class="mb-4 font-semibold">
         Prześlij dokument w formacie .tex w celu sprawdzenia podobieństwa wzorów, które się w
-        nim znajdują, z innymi wzorami z dokumentów w naszej bazie.
+        nim znajdują, z innymi wzorami z dokumentów w naszej bazie, aby sprawdzić czy nie zostały one skradzione.
+        Możesz również porównać dwa dokumenty, aby sprawdzić czy wzory w nich zawarte nie są podobne do siebie.
       </p>
       <form id="fileUploadForm" class="mb-4">
 
@@ -38,21 +39,24 @@
           <input type="file" id="fileInput1" name="file1" class="mt-1 p-2 border border-gray-300 rounded-md w-full" />
         </div>
 
-        <label id="document1-warning" class="hidden text-sm font-medium text-black-700"> Prześlij dokument .tex do analizy, aby móc kontynuować</label>
+        <label id="document1-warning" class="hidden text-sm font-medium text-black-700"> Prześlij dokument .tex do
+          analizy, aby móc kontynuować</label>
 
         <div class="1" id="fileInput2Div">
           <label for="fileInput2" class="block text-sm font-medium text-gray-600">Wybierz drugi dokument:</label>
           <input type="file" id="fileInput2" name="file2" class="mt-1 p-2 border border-gray-300 rounded-md w-full" />
         </div>
 
-        <label id="document2-warning" class="hidden text-sm font-medium text-black-700"> Prześlij drugi dokument .tex, aby kontynuować</label>
+        <label id="document2-warning" class="hidden text-sm font-medium text-black-700"> Prześlij drugi dokument .tex,
+          aby kontynuować</label>
 
         <div class="">
-          <h3 class="text-l font-semibold" id="toggleAdvancedOptions"> Opcje zaawansowane (naciśnij aby rozwinać)</h3>
+          <h3 class="text-l font-semibold" id="toggleAdvancedOptions"> Opcje zaawansowane (naciśnij aby rozwinąć)</h3>
         </div>
 
         <div class="advancedSettings">
-          <label class="text-sm text-gray-600">* W celu regularnej analizy dokumentów, pozostaw poniższe opcje bez zmian</label>
+          <label class="text-sm text-gray-600">* W celu regularnej analizy dokumentów, pozostaw poniższe opcje bez
+            zmian</label>
           <div class="mb-4">
             <label class="block text-sm font-medium text-black-700">Wybierz algorytmy, którymi chcesz przebadać
               pliki</label>
@@ -75,18 +79,21 @@
           </div>
 
           <div class="mb-4">
-            <label for="valueInput" class="block text-sm font-medium text-black-700">Wprowadź próg procentowy akceptowalnego
-              podobieństwa 0-100%, gdzie: 0% każde, nawet najmniejsze, podobieństwo zostanie wykryte; 100% tylko identyczne
+            <label for="valueInput" class="block text-sm font-medium text-black-700">Wprowadź próg procentowy
+              akceptowalnego
+              podobieństwa 0-100%, gdzie: 0% każde, nawet najmniejsze, podobieństwo zostanie wykryte; 100% tylko
+              identyczne
               wzory zostaną wykryte.</label>
             <input type="number" id="valueInput" name="value" class="mt-1 p-2 border border-gray-300 rounded-md w-full"
-              min="0" max="100" value="30" />
+              min="0" max="100" value="60" />
             <label id="warning-treshold" class="hidden text-sm font-medium text-black-700"> Wprowadź wartość progu
               procentowego z zakresu
               0-100.</label>
           </div>
         </div>
 
-        <button type="button" onclick="submitForm()" class="bg-blue-500 text-white px-4 py-2 mt-4 rounded-md w-full">
+        <button id="submitButton" type="button" onclick="submitForm()"
+          class="bg-blue-500 text-white px-4 py-2 mt-4 rounded-md w-full">
           Porównaj
         </button>
       </form>
@@ -96,11 +103,11 @@
 
   <script defer>
 
-    const advancedOptions = document.querySelector('.advancedSettings') 
+    const advancedOptions = document.querySelector('.advancedSettings')
     const toggleAdvancedOptions = document.querySelector('#toggleAdvancedOptions');
 
     toggleAdvancedOptions.addEventListener('click', function () {
-        advancedOptions.classList.toggle('active', !advancedOptions.classList.contains('active'));
+      advancedOptions.classList.toggle('active', !advancedOptions.classList.contains('active'));
     });
 
     //showing fileInput2Div if option2 is checked
@@ -131,7 +138,9 @@
       const warningTreshold = document.getElementById("warning-treshold");
       const warningDocument1 = document.getElementById("document1-warning");
       const warningDocument2 = document.getElementById("document2-warning");
-
+      const submitButton = document.getElementById("submitButton");
+      submitButton.textContent = 'Obliczam...';
+      submitButton.disabled = true;
       //selecting algorithms from checkboxes
       let checkboxes = document.querySelectorAll('input[type=checkbox][name^="algorithm"]');
       let selectedAlgorithms = [];
@@ -227,11 +236,15 @@
 
       if (response.ok) {
         const result = await response.json();
+        submitButton.textContent = 'Porównaj';
+        submitButton.disabled = false;
         console.log(result)
         window.location.href = `${baseURL}/report-base`;
         displayResult(result);
       } else {
         console.error("Error:", response.statusText);
+        submitButton.textContent = 'Porównaj';
+        submitButton.disabled = false;
       }
     }
 
